--- a/css/scss/assets/_cardsGlosario.scss
+++ b/css/scss/assets/_cardsGlosario.scss
@@ -66,6 +66,7 @@
         font-size: 22px;
         font-weight: 700;
         margin: 15px 0;
+        background-color: transparent !important;
 
         @media (max-width: 1300px) {
             &{
@@ -105,6 +106,7 @@
         font-size: 20px;
         font-weight: 600;
         padding: 20px;
+        background-color: transparent !important;
 
         @media (max-width: 1300px) {
             &{
@@ -142,31 +144,31 @@
     display: none !important;
 }
 
-//Nuevo codigo para los colores
-@function generate-pastel-color($index) {
-    $base-hue: 165deg; // Puedes ajustar el tono base según tu preferencia
-    $lightness: 40%; // Puedes ajustar la luminosidad base según tu preferencia
+// //Nuevo codigo para los colores
+// @function generate-pastel-color($index) {
+//     $base-hue: 165deg; // Puedes ajustar el tono base según tu preferencia
+//     $lightness: 40%; // Puedes ajustar la luminosidad base según tu preferencia
   
-    // Calcular el tono para el índice dado
-    $hue: $base-hue + ($index * 3deg);
+//     // Calcular el tono para el índice dado
+//     $hue: $base-hue + ($index * 3deg);
   
-    // Generar el color en formato HSL con luminosidad
-    $color: hsl($hue, 70%, $lightness);
+//     // Generar el color en formato HSL con luminosidad
+//     $color: hsl($hue, 70%, $lightness);
   
-    // Convertir HSL a RGB
-    $red: red($color);
-    $green: green($color);
-    $blue: blue($color);
+//     // Convertir HSL a RGB
+//     $red: red($color);
+//     $green: green($color);
+//     $blue: blue($color);
   
-    @return rgb($red, $green, $blue);
-  }
+//     @return rgb($red, $green, $blue);
+//   }
   
-  // Generar estilos para 100 elementos
-  @for $i from 1 through 100 {
-    .swiper-slide:nth-child(#{$i}n) {
-      background-color: generate-pastel-color($i);
-    }
-  }
+//   // Generar estilos para 100 elementos
+//   @for $i from 1 through 100 {
+//     .swiper-slide:nth-child(#{$i}n) {
+//       background-color: generate-pastel-color($i);
+//     }
+//   }
   
   
 
