--- a/css/colors/standarColors.css
+++ b/css/colors/standarColors.css
@@ -3,7 +3,7 @@ body {
     background-color: #fff;
 }
 
-/*Base palette*/
+/*Base palette - Cambiando a tonos grises para mejor legibilidad*/
 .cl1 {
     background-color: #7C98D3; /* Azul pastel oscuro */
 }
@@ -33,25 +33,25 @@ body {
     background-color: #FAFBFE; /* Fondo casi blanco con tinte azul */
 }
 
-/*Grey element*/
+/*Grey element - Mejorando los tonos para evaluación*/
 .clgreyl1 {
-    background-color: #F8FAFC;
+    background-color: #F8FAFC; /* Gris muy claro */
 }
 
 .clgreyl2 {
-    background-color: #E8EDF7;
+    background-color: #E8EDF7; /* Gris claro */
 }
 
 .clgreyl3 {
-    background-color: #D6E0F3;
+    background-color: #D6E0F3; /* Gris medio claro */
 }
 
 .clgreyl4 {
-    background-color: #B5C7E5;
+    background-color: #B5C7E5; /* Gris medio */
 }
 
-.clgreyl4 {
-    background-color: #aaa;
+.clgreyl5 {
+    background-color: #A0A0A0; /* Gris medio oscuro */
 }
 
 /*Text style*/
@@ -151,10 +151,11 @@ input[type="range"]::-webkit-slider-thumb {
     background-color: #89C0D2;
 }
 
+/* Modificando los estilos de hover para botones */
 .btn:hover,
 .btn-large:hover,
 .btn-small:hover {
-    background-color: #9ACFE0 !important;
+    background-color: #6785C4 !important; /* Tono más oscuro que el azul base */
     color: #fff !important;
 }
 
@@ -162,8 +163,81 @@ input[type="range"]::-webkit-slider-thumb {
 .btn-large:focus,
 .btn-small:focus,
 .btn-floating:focus {
-    background-color: #9ACFE0 !important;
+    background-color: #6785C4 !important; /* Tono más oscuro que el azul base */
     color: #fff !important;
+}
+
+/* Estilos para botones en estado active o clicked */
+.btn:active,
+.btn-large:active,
+.btn-small:active,
+.btn.active,
+.btn-large.active,
+.btn-small.active {
+    background-color: #5672B1 !important; /* Tono aún más oscuro que el hover */
+    color: #fff !important;
+    transform: scale(0.98); /* Ligero efecto de presión */
+}
+
+/* Para botones con clase cl1 */
+.cl1.btn:active, 
+.cl1.btn-large:active, 
+.cl1.btn-small:active,
+.cl1.btn.active,
+.cl1.btn-large.active,
+.cl1.btn-small.active {
+    background-color: #5672B1 !important; /* Más oscuro que hover de cl1 */
+}
+
+/* Para botones con clase cl2 */
+.cl2.btn:active, 
+.cl2.btn-large:active, 
+.cl2.btn-small:active,
+.cl2.btn.active,
+.cl2.btn-large.active,
+.cl2.btn-small.active {
+    background-color: #45619E !important; /* Más oscuro que hover de cl2 */
+}
+
+/* Para botones con clase cl3 */
+.cl3.btn:active, 
+.cl3.btn-large:active, 
+.cl3.btn-small:active,
+.cl3.btn.active,
+.cl3.btn-large.active,
+.cl3.btn-small.active {
+    background-color: #6981B6 !important; /* Más oscuro que hover de cl3 */
+}
+
+/* Para botones con clase cl4 */
+.cl4.btn:active, 
+.cl4.btn-large:active, 
+.cl4.btn-small:active,
+.cl4.btn.active,
+.cl4.btn-large.active,
+.cl4.btn-small.active {
+    background-color: #788CBB !important; /* Más oscuro que hover de cl4 */
+}
+
+/* Para botones con clase clgreyl4 */
+.clgreyl4.btn:active, 
+.clgreyl4.btn-large:active, 
+.clgreyl4.btn-small:active,
+.clgreyl4.btn.active,
+.clgreyl4.btn-large.active,
+.clgreyl4.btn-small.active {
+    background-color: #93A5C3 !important; /* Más oscuro que hover de clgreyl4 */
+}
+
+/* Modificar también los botones flotantes */
+.btn-floating:hover {
+    background-color: #6785C4 !important;
+}
+
+.btn-floating:active,
+.btn-floating.active {
+    background-color: #5672B1 !important;
+    transform: scale(0.95);
 }
 
 .tabs .tab a:focus,
@@ -178,13 +252,13 @@ input[type="range"] {
 
 /*Configuraciones de textos*/
 .activeButtonText {
-    background-color: #78B1C4 !important;
+    background-color: #7C98D3 !important; /* Cambiado a cl1 */
     color: #ffffff !important;
 }
 
 /*Menu lateral de textos*/
 .leftBorderMenuPrincipal {
-    border-bottom: #9ACFE0 70px solid !important;
+    border-bottom: #9AAEDD 70px solid !important; /* Cambiado a cl4 */
     overflow-x: hidden;
 }
 
@@ -193,15 +267,15 @@ input[type="range"] {
 }
 
 .activeButtonTextLateralPrincipal {
-    border-left: 10px #9ACFE0 solid;
-    background-color: #e9e9e9;
+    border-left: 10px #7C98D3 solid; /* Cambiado a cl1 */
+    background-color: #F8FAFC; /* Cambiado a clgreyl1 */
     border-radius: 5px;
     transition: all 0.1s ease-in-out;
     box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
 }
 
 .lateralMenuAdjustTextTitlePrincipal {
-    background-color: #9ACFE0;
+    background-color: #8BA3D8; /* Cambiado a cl3 */
     position: relative;
     top: 0px;
     left: 0;
