--- a/css/colors/standarDark.css
+++ b/css/colors/standarDark.css
@@ -158,7 +158,7 @@ input[type=range]::-webkit-slider-thumb {
 .btn:hover,
 .btn-large:hover,
 .btn-small:hover {
-    background-color: #78B1C4 !important;
+    background-color: #4A5F8C !important; /* Tono más oscuro que el azul base en modo oscuro */
     color: #fff !important;
 }
 
@@ -166,8 +166,104 @@ input[type=range]::-webkit-slider-thumb {
 .btn-large:focus,
 .btn-small:focus,
 .btn-floating:focus {
-    background-color: #78B1C4 !important;
+    background-color: #4A5F8C !important; /* Tono más oscuro que el azul base en modo oscuro */
     color: #fff !important;
+}
+
+.btn:active,
+.btn-large:active,
+.btn-small:active,
+.btn.active,
+.btn-large.active,
+.btn-small.active {
+    background-color: #3A4D78 !important; /* Tono aún más oscuro que el hover */
+    color: #fff !important;
+    transform: scale(0.98); /* Ligero efecto de presión */
+}
+
+.cl1.btn:hover, 
+.cl1.btn-large:hover, 
+.cl1.btn-small:hover {
+    background-color: #4A5F8C !important; /* Más oscuro que cl1 en modo oscuro */
+}
+
+.cl1.btn:active, 
+.cl1.btn-large:active, 
+.cl1.btn-small:active,
+.cl1.btn.active,
+.cl1.btn-large.active,
+.cl1.btn-small.active {
+    background-color: #3A4D78 !important; /* Más oscuro que hover de cl1 */
+}
+
+.cl2.btn:hover, 
+.cl2.btn-large:hover, 
+.cl2.btn-small:hover {
+    background-color: #3A4D78 !important; /* Más oscuro que cl2 en modo oscuro */
+}
+
+.cl2.btn:active, 
+.cl2.btn-large:active, 
+.cl2.btn-small:active,
+.cl2.btn.active,
+.cl2.btn-large.active,
+.cl2.btn-small.active {
+    background-color: #2A3B64 !important; /* Más oscuro que hover de cl2 */
+}
+
+.cl3.btn:hover, 
+.cl3.btn-large:hover, 
+.cl3.btn-small:hover {
+    background-color: #5A6F9C !important; /* Más oscuro que cl3 en modo oscuro */
+}
+
+.cl3.btn:active, 
+.cl3.btn-large:active, 
+.cl3.btn-small:active,
+.cl3.btn.active,
+.cl3.btn-large.active,
+.cl3.btn-small.active {
+    background-color: #4A5F8C !important; /* Más oscuro que hover de cl3 */
+}
+
+.cl4.btn:hover, 
+.cl4.btn-large:hover, 
+.cl4.btn-small:hover {
+    background-color: #6A7FAC !important; /* Más oscuro que cl4 en modo oscuro */
+}
+
+.cl4.btn:active, 
+.cl4.btn-large:active, 
+.cl4.btn-small:active,
+.cl4.btn.active,
+.cl4.btn-large.active,
+.cl4.btn-small.active {
+    background-color: #5A6F9C !important; /* Más oscuro que hover de cl4 */
+}
+
+.clgreyl4.btn:hover, 
+.clgreyl4.btn-large:hover, 
+.clgreyl4.btn-small:hover {
+    background-color: #5A6A85 !important; /* Más oscuro que clgreyl4 en modo oscuro */
+}
+
+.clgreyl4.btn:active, 
+.clgreyl4.btn-large:active, 
+.clgreyl4.btn-small:active,
+.clgreyl4.btn.active,
+.clgreyl4.btn-large.active,
+.clgreyl4.btn-small.active {
+    background-color: #4A5A75 !important; /* Más oscuro que hover de clgreyl4 */
+}
+
+.btn-floating:hover {
+    background-color: #4A5F8C !important;
+}
+
+.btn-floating:active,
+.btn-floating.active {
+    background-color: #3A4D78 !important;
+    transform: scale(0.95);
 }
 
 .tabs .tab a:focus,
@@ -182,13 +278,13 @@ input[type="range"] {
 
 /*Configuraciones de textos*/
 .activeButtonText {
-    background-color: #67A2B6 !important;
+    background-color: #3A4B77 !important; /* Cambiado a cl3 en modo oscuro */
     color: #ffffff !important;
 }
 
 /*Menu lateral de textos*/
 .leftBorderMenuPrincipal {
-    border-bottom: #78B1C4 70px solid !important;
+    border-bottom: #435688 70px solid !important; /* Cambiado a cl4 en modo oscuro */
     overflow-x: hidden;
 }
 
@@ -197,17 +293,15 @@ input[type="range"] {
 }
 
 .activeButtonTextLateralPrincipal {
-    border-left: 10px #78B1C4 solid;
-    background-color: #444c57;
+    border-left: 10px #2A3655 solid; /* Cambiado a cl1 en modo oscuro */
+    background-color: #232838; /* Cambiado a clgreyl1 en modo oscuro */
     border-radius: 5px;
-    transition: all .1s ease-in-out;
-    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14),
-        0 3px 1px -2px rgba(0, 0, 0, 0.2),
-        0 1px 5px 0 rgba(0, 0, 0, 0.12);
+    transition: all 0.1s ease-in-out;
+    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
 }
 
 .lateralMenuAdjustTextTitlePrincipal {
-    background-color: #78B1C4;
+    background-color: #324066; /* Cambiado a cl2 en modo oscuro */
     position: relative;
     top: 0px;
     left: 0;
