--- a/css/scss/assets/_cards.scss
+++ b/css/scss/assets/_cards.scss
@@ -252,10 +252,10 @@
 
 /* Nueva card para Proyecto Final */
 #a6 {
-	border-bottom: 20px #FFD166 solid;
+	border-bottom: 20px #7BA7CC solid;
 	&:hover {
 		padding: 10px 20px 20px 20px;
-		border-bottom: 40px #E6B800 solid;
+		border-bottom: 40px #61829d solid;
 	}
 }
 
